# rust-game

./: Cargo.toml
assets/: debug.wgsl
src/: camera_controller.rs  cursor.rs  debug.rs  main.rs  player.rs  tilemap.rs
