[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.7.0", features = ["dynamic"] }
bevy-inspector-egui = "0.10.0"
bitflags = "1.3.2"
bytemuck = "1.9.1"
copyless = "0.1.5"
rand = "0.8.5"

[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
